--- a/html/fgxpresspage.html
+++ b/html/fgxpresspage.html
@@ -62,7 +62,7 @@
 				
 				<h3> Fill the information below so I can contact you and set you up with the solution of your situation</h3>
 					
-				<form method="POST" action="https://egautier.fgxpress.com" id="mainForm">
+				<form method="POST" action="eliasnayeli@gmail.com" id="mainForm">
 					<div>
 						<label for="name_first">First Name</label>
 						<input type="text" name="name_first" id="name_first"/>
